login page and signup page + backend are fully done

--- a/client/src/components/styles/Header.css
+++ b/client/src/components/styles/Header.css
@@ -74,3 +74,10 @@ span {
   background-color: rgb(49, 0, 88);
   transition: all 0.4s ease;
 }
+
+.logLinks a {
+  font-size: 20px;
+  color: black;
+  font-style: initial;
+  text-decoration: underline;
+}
